btn visibility fixes

--- a/sass/_mobile.sass
+++ b/sass/_mobile.sass
@@ -1,4 +1,3 @@
-//  SCREEN WIDTH
 @media (max-width: 768px)
 
   //  GLOBAL
@@ -17,6 +16,7 @@
         content: 'About me'
         color: #fff
         visibility: visible
+        opacity: 1
         transform: rotateZ(-45deg) translate(0%, -33%)
         border: none
         top: 50%
